boltffi_backend/tests/jni/snapshots/jni__associated__jni_bridge_renders_async_record_methods.snap
---
source: boltffi_backend/tests/jni/associated.rs
expression: "rendered_fixture(\"associated/async_record_method\")"
---
===== jni/demo.h =====
<c abi support declarations>
typedef struct {
    double x;
    double y;
} ___Point;
RustFutureHandle boltffi_method_record_demo_point_compute(___Point receiver);
int8_t boltffi_async_method_record_demo_point_compute_poll(RustFutureHandle handle, uint64_t callback_data, void (*callback)(uint64_t, int8_t));
double boltffi_async_method_record_demo_point_compute_complete(RustFutureHandle handle, FfiStatus *out_status);
FfiBuf_u8 boltffi_async_method_record_demo_point_compute_panic_message(RustFutureHandle handle);
void boltffi_async_method_record_demo_point_compute_cancel(RustFutureHandle handle);
void boltffi_async_method_record_demo_point_compute_free(RustFutureHandle handle);

===== jni/jni_glue.c =====
<jni source includes>
<jni thread runtime>
<jni continuation helper>
<jni exception helpers>
<jni status helper>
<jni byte-array helpers>
static bool boltffi_jni_direct_buffer_address(JNIEnv *env, jobject buffer, jlong required_capacity, void **address) {
    if (buffer == NULL) {
        boltffi_jni_throw_illegal_argument(env, "BoltFFI direct buffer argument was null");
        return false;
    }
    if (required_capacity < 0) {
        boltffi_jni_throw_illegal_argument(env, "BoltFFI direct buffer length was negative");
        return false;
    }
    jlong capacity = (*env)->GetDirectBufferCapacity(env, buffer);
    if (capacity < 0) {
        boltffi_jni_throw_illegal_argument(env, "BoltFFI argument was not a direct buffer");
        return false;
    }
    if (capacity < required_capacity) {
        boltffi_jni_throw_illegal_argument(env, "BoltFFI direct buffer capacity was too small");
        return false;
    }
    *address = (*env)->GetDirectBufferAddress(env, buffer);
    if (*address == NULL && required_capacity != 0) {
        boltffi_jni_throw_illegal_argument(env, "BoltFFI direct buffer address was unavailable");
        return false;
    }
    return true;
}

JNIEXPORT jint JNICALL JNI_OnLoad(JavaVM *vm, void *reserved) {
    (void)reserved;
    JNIEnv *env = NULL;
    jint env_result = (*vm)->GetEnv(vm, (void **)&env, JNI_VERSION_1_6);
    if (env_result != JNI_OK) {
        fprintf(stderr, "BoltFFI JNI_OnLoad failed: GetEnv(JNI_VERSION_1_6) returned %d\n", (int)env_result);
        return JNI_ERR;
    }
    if (!boltffi_jni_lookup_global_class_with_diagnostic(env, "com/boltffi/demo/Native", "com/boltffi/demo/Native", &boltffi_jni_native_class)) {
        return JNI_ERR;
    }
    if (!boltffi_jni_continuation_load(env)) {
        (*env)->DeleteGlobalRef(env, boltffi_jni_native_class);
        boltffi_jni_native_class = NULL;
        return JNI_ERR;
    }
    boltffi_jni_vm = vm;
    return JNI_VERSION_1_6;
}

JNIEXPORT void JNICALL JNI_OnUnload(JavaVM *vm, void *reserved) {
    (void)reserved;
    JNIEnv *env = NULL;
    if ((*vm)->GetEnv(vm, (void **)&env, JNI_VERSION_1_6) == JNI_OK) {
        boltffi_jni_continuation_unload(env);
        if (boltffi_jni_native_class != NULL) {
            (*env)->DeleteGlobalRef(env, boltffi_jni_native_class);
        }
    }
    boltffi_jni_vm = NULL;
    boltffi_jni_native_class = NULL;
}

JNIEXPORT jlong JNICALL Java_com_boltffi_demo_Native_boltffi_1method_1record_1demo_1point_1compute(JNIEnv *env, jclass cls, jobject receiver) {
    (void)cls;

    void *__boltffi_receiver_ptr = NULL;
    ___Point __boltffi_receiver_value;

    if (!boltffi_jni_direct_buffer_address(env, receiver, (jlong)sizeof(___Point), &__boltffi_receiver_ptr)) {
        goto __boltffi_error;
    }
    memcpy(&__boltffi_receiver_value, __boltffi_receiver_ptr, sizeof(___Point));

    (void)env;
    RustFutureHandle __boltffi_result = boltffi_method_record_demo_point_compute(__boltffi_receiver_value);

    return (jlong)__boltffi_result;
__boltffi_error:
    return 0;
}

JNIEXPORT jbyte JNICALL Java_com_boltffi_demo_Native_boltffi_1async_1method_1record_1demo_1point_1compute_1poll(JNIEnv *env, jclass cls, jlong handle, jlong callback_data) {
    (void)cls;

    (void)env;
    int8_t __boltffi_result = boltffi_async_method_record_demo_point_compute_poll((RustFutureHandle)handle, callback_data, boltffi_jni_continuation_callback);

    return (jbyte)__boltffi_result;
}

JNIEXPORT jdouble JNICALL Java_com_boltffi_demo_Native_boltffi_1async_1method_1record_1demo_1point_1compute_1complete(JNIEnv *env, jclass cls, jlong handle) {
    (void)cls;

    FfiStatus __boltffi_status = (FfiStatus){0};

    double __boltffi_result = boltffi_async_method_record_demo_point_compute_complete((RustFutureHandle)handle, &__boltffi_status);

    if (__boltffi_status.code != 0) {
        boltffi_jni_throw_status(env, __boltffi_status);
        return 0;
    }

    return (jdouble)__boltffi_result;
}

JNIEXPORT jbyteArray JNICALL Java_com_boltffi_demo_Native_boltffi_1async_1method_1record_1demo_1point_1compute_1panic_1message(JNIEnv *env, jclass cls, jlong handle) {
    (void)cls;

    (void)env;
    FfiBuf_u8 __boltffi_result = boltffi_async_method_record_demo_point_compute_panic_message((RustFutureHandle)handle);

    return boltffi_jni_buffer_to_byte_array(env, __boltffi_result);
}

JNIEXPORT void JNICALL Java_com_boltffi_demo_Native_boltffi_1async_1method_1record_1demo_1point_1compute_1cancel(JNIEnv *env, jclass cls, jlong handle) {
    (void)cls;

    (void)env;
    boltffi_async_method_record_demo_point_compute_cancel((RustFutureHandle)handle);

    return;
}

JNIEXPORT void JNICALL Java_com_boltffi_demo_Native_boltffi_1async_1method_1record_1demo_1point_1compute_1free(JNIEnv *env, jclass cls, jlong handle) {
    (void)cls;

    (void)env;
    boltffi_async_method_record_demo_point_compute_free((RustFutureHandle)handle);

    return;
}
