boltffi_backend/tests/jni/snapshots/jni__associated__jni_bridge_renders_record_associated_callables.snap
---
source: boltffi_backend/tests/jni/associated.rs
expression: "rendered_fixture(\"associated/record_callables\")"
---
===== jni/demo.h =====
<c abi support declarations>
typedef struct {
    double x;
    double y;
} ___Point;
___Point boltffi_init_record_demo_point_origin(void);
double boltffi_method_record_demo_point_distance(___Point receiver, ___Point other);
FfiBuf_u8 boltffi_method_record_demo_person_rename(const uint8_t *receiver_ptr, uintptr_t receiver_len, const uint8_t *name_ptr, uintptr_t name_len);

===== jni/jni_glue.c =====
<jni source includes>
<jni exception helpers>
<jni byte-array helpers>
<jni record helpers>
static bool boltffi_jni_direct_buffer_address(JNIEnv *env, jobject buffer, jlong required_capacity, void **address) {
    if (buffer == NULL) {
        boltffi_jni_throw_illegal_argument(env, "BoltFFI direct buffer argument was null");
        return false;
    }
    if (required_capacity < 0) {
        boltffi_jni_throw_illegal_argument(env, "BoltFFI direct buffer length was negative");
        return false;
    }
    jlong capacity = (*env)->GetDirectBufferCapacity(env, buffer);
    if (capacity < 0) {
        boltffi_jni_throw_illegal_argument(env, "BoltFFI argument was not a direct buffer");
        return false;
    }
    if (capacity < required_capacity) {
        boltffi_jni_throw_illegal_argument(env, "BoltFFI direct buffer capacity was too small");
        return false;
    }
    *address = (*env)->GetDirectBufferAddress(env, buffer);
    if (*address == NULL && required_capacity != 0) {
        boltffi_jni_throw_illegal_argument(env, "BoltFFI direct buffer address was unavailable");
        return false;
    }
    return true;
}

JNIEXPORT jbyteArray JNICALL Java_com_boltffi_demo_Native_boltffi_1init_1record_1demo_1point_1origin(JNIEnv *env, jclass cls) {
    (void)cls;

    (void)env;
    ___Point __boltffi_result = boltffi_init_record_demo_point_origin();

    return boltffi_jni_record_to_byte_array(env, &__boltffi_result, (uintptr_t)sizeof(__boltffi_result));
}

JNIEXPORT jdouble JNICALL Java_com_boltffi_demo_Native_boltffi_1method_1record_1demo_1point_1distance(JNIEnv *env, jclass cls, jobject receiver, jobject other) {
    (void)cls;

    void *__boltffi_receiver_ptr = NULL;
    ___Point __boltffi_receiver_value;
    void *__boltffi_other_ptr = NULL;
    ___Point __boltffi_other_value;

    if (!boltffi_jni_direct_buffer_address(env, receiver, (jlong)sizeof(___Point), &__boltffi_receiver_ptr)) {
        goto __boltffi_error;
    }
    memcpy(&__boltffi_receiver_value, __boltffi_receiver_ptr, sizeof(___Point));
    if (!boltffi_jni_direct_buffer_address(env, other, (jlong)sizeof(___Point), &__boltffi_other_ptr)) {
        goto __boltffi_error;
    }
    memcpy(&__boltffi_other_value, __boltffi_other_ptr, sizeof(___Point));

    (void)env;
    double __boltffi_result = boltffi_method_record_demo_point_distance(__boltffi_receiver_value, __boltffi_other_value);

    return (jdouble)__boltffi_result;
__boltffi_error:
    return 0;
}

JNIEXPORT jbyteArray JNICALL Java_com_boltffi_demo_Native_boltffi_1method_1record_1demo_1person_1rename(JNIEnv *env, jclass cls, jobject receiver, jint __boltffi_receiver_len, jobject name, jint __boltffi_name_len) {
    (void)cls;

    void *__boltffi_receiver_ptr = NULL;
    void *__boltffi_name_ptr = NULL;

    if (!boltffi_jni_direct_buffer_address(env, receiver, (jlong)__boltffi_receiver_len, &__boltffi_receiver_ptr)) {
        goto __boltffi_error;
    }
    if (!boltffi_jni_direct_buffer_address(env, name, (jlong)__boltffi_name_len, &__boltffi_name_ptr)) {
        goto __boltffi_error;
    }

    (void)env;
    FfiBuf_u8 __boltffi_result = boltffi_method_record_demo_person_rename((const uint8_t *)__boltffi_receiver_ptr, (uintptr_t)__boltffi_receiver_len, (const uint8_t *)__boltffi_name_ptr, (uintptr_t)__boltffi_name_len);

    return boltffi_jni_buffer_to_byte_array(env, __boltffi_result);
__boltffi_error:
    return NULL;
}
